after adding user list